--- a/views/index.html
+++ b/views/index.html
@@ -87,14 +87,14 @@ width: 20%;
           <input class="form-check-input" type="checkbox" name="checkdate" <%=query.checkdate ? ' checked' : '' ; %>>Date
         </label>
         <div class="col-10">
-          <input class="form-control" type="text" placeholder="start date" id="example-email-input" name="formdate"
+          <input class="form-control" type="Date" placeholder="start date" id="example-email-input" name="formdate"
             value="<%= query.formdate %>">
         </div>
       </div>
       <div class="form-group row">
         <label class="col-2 col-form-label"></label>
         <div class="col-10">
-          <input class="form-control" type="text" placeholder="end date" id="example-email-input" name="formenddate"
+          <input class="form-control" type="Date" placeholder="end date" id="example-email-input" name="formenddate"
             value="<%= query.formenddate %>">
         </div>
       </div>
@@ -146,7 +146,7 @@ width: 20%;
             <%= item.float %>
           </td>
           <td class="Date">
-            <%= item.date %>
+            <%= moment(item.date).format("DD-MM-YYYY") %>
           </td>
           <td class="Boolean">
             <%= item.boolean %>
