--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,8 @@ width: 20%;
 <body>
   <div class="container">
 
-    <h1>BREAD(Browse,Read,Edit,Add,Delete)</h1>
+    <h1 align="center">Mongo-DB</h1>
+    <h2>BREAD(Browse,Read,Edit,Add,Delete)</h2>
     <h2>Filters</h2>
 
 
